--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -3,7 +3,7 @@ html {
     line-height: 1.4;
 }
 
-body{
+body {
     margin: 0;
     font-family: Helvetica, sans-serif;
     background-color: white;
@@ -19,7 +19,7 @@ body{
     align-items: center;
 }
 
-.container{
+.container {
     width: 960px;
 }
 
@@ -57,7 +57,10 @@ body{
 
 .navbar__nav__list__item {
     margin-right: 2rem;
+}
 
+.nav-small {
+    display: none;
 }
 
 .header__title {
@@ -152,4 +155,117 @@ body{
 .footer img {
     height: 1.5rem;
     margin-right: 1rem;
+}
+
+@media all and (max-width: 1024px) {
+    .container {
+         width: 100%;
+    }
+
+    .header {
+        height: 22rem;
+    }
+
+    .navbar {
+        margin-top: 0;
+    }
+
+    .header__title {
+        margin-top: 5rem;
+        margin-right: 2rem;
+        font-size: 1.33rem;
+    }
+
+    .header__title__text {
+        padding: 0.75rem 4rem;
+    }
+
+    .main__icons {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .main__info {
+        justify-content: center;
+    }
+}
+
+@media all and (max-width: 470px) {
+    .header {
+        height: 17rem;
+        background-position: 20%;
+    }
+
+    .navbar__logo span {
+        display: none;
+    }
+
+    .nav-big {
+        display: none;
+    }
+
+    .nav-small {
+        display: block;
+    }
+
+    .header__title {
+        width: 100%;
+        margin-right: 0;
+        margin-top: 9rem;
+        text-align: center;
+    }
+
+    .header__title__text {
+        font-size:1rem;
+        width: 100%;
+        padding: 1rem 0;
+    }
+
+    .main__icons {
+        margin-top: 2.23rem;
+        margin-bottom: 3.77rem;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main__icons__item {
+        margin-top: 1.54rem;
+        font-size: 0.77rem;
+        margin-right: 0;
+        height: auto;
+    }
+
+    .main__icons__item img {
+        margin-bottom: 0.5rem;
+    }
+
+    .main__info {
+        flex-direction: column;
+        margin-bottom: 2rem;
+    }
+
+    .main__info__item {
+        width: 100%;
+    }
+
+    .main__info__item__title {
+        width: 100%;
+        margin-bottom: 1rem;
+    }
+
+    .main__info__item p{
+        width: 95%;
+        margin-left: 2.5%;
+        font-size: 0.77rem;
+        margin-bottom: 4rem;
+    }
+
+    .footer__content {
+        justify-content: center;
+    }
+
+    .footer__content span {
+        display: none;
+    }
 }
